# momo-data-analysis

./: README.md  Report
backend/: .env  .env.example  .gitignore  Makefile  app.py  data_cleaning.py  db_setup.py  load_data.py  main.py  models.py  momo_dashboard.db  parse_xml.py  pyproject.toml  requirements.txt  schema.sql  sms_processing.py  utils.py
draft/: config.py
frontend/: index.css  index.html  index.js  main.js  sample_data.json  style.css  styles.css
