[tool.poetry]
name = "bend"
version = "0.1.0"
description = ""
authors = ["kayigmb <kayigm1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlmodel = "^0.0.22"
pydantic-settings = "^2.7.1"
psycopg2-binary = "^2.9.10"
uvicorn = "^0.34.0"
fastapi = "^0.115.8"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
